# inventario

./: README.md  pyproject.toml
src/inventario_gui/: app.py  gui.py
src/inventario_gui.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/inventario_gui/database/: inventario.db
