[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inventario-gui"
version = "0.1.0"
description = "Inventory Manager with Tkinter GUI and SQLite"
authors = [{ name = "Juan Sebastián Cristal" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6"
]

[tool.setuptools.packages.find]
where = ["src"]
